# cosmoverse-engine

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mailmap  .markdownlint.json  .pa11yci.json  .pre-commit-config.yaml  .vale.ini  .yamllint  AUTHORS  BUILD  BUILD.bazel  CHANGELOG.md  CITATION.cff  CLA.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  Dockerfile  Dockerfile.distroless  Dockerfile.rootless  Dockerfile.static  Doxyfile  Doxyfile.strict  GOVERNANCE.md  HACKING.md  INCIDENT_RESPONSE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  Package.swift  (+14 more)
.allstar/: allstar.yaml  repo.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/allstar/: config.yaml
.github/workflows/: abi-check.yml  abi-stability.yml  abi.yml  actionlint.yml  actions-pinning.yml  alex.yml  android.yml  bazel.yml  bloaty.yml  cache-build.yml  cflite-main.yml  cflite-pr.yml  changelog.yml  ci-advanced.yml  ci-matrix.yml  ci-quick.yml  ci.yml  clang-format-check.yml  clang-format.yml  clang-libcxx.yml  clang-tidy.yml  cmake-format.yml  cmakelint.yml  codecov.yml  codeql.yml  codespell.yml  commitlint.yml  compilers.yml  config-lint.yml  container-multiarch.yml  container-scan.yml  container-sign.yml  coverage-gate.yml  coverage-lcov.yml  coverage.yml  cppcheck.yml  ctest-junit.yml  dco-check.yml  dco.yml  dependency-review.yml  (+92 more)
.reuse/: dep5
Sources/CCosmoverse/: cosmoverse.h  module.modulemap
Sources/Cosmoverse/: Cosmoverse.swift
apps/: cosmo_plugin_runner.cpp  cosmoverse.cpp  wasm_demo.c
benchmarks/: bench_main.cpp  coverage_budget.json  google_bench.cpp  perf_baseline.json  perf_budget.json  size_baseline.json  size_budget.json
bindings/go/: README.md
bindings/java/: README.md  build.gradle  settings.gradle
bindings/node/: README.md  binding.gyp  index.js  package.json
bindings/python/: README.md  pyproject.toml
charts/cosmoverse/: Chart.yaml  values.yaml
cmake/: CosmoverseConfig.cmake.in  cosmoverse.pc.in  symbols.map  uninstall.cmake
cmake/linker/: cosmoverse.map
cmake/pkgconfig/: cosmoverse.pc.in
cmake/symbols/: cosmoverse.map  exported_symbols.list
cmake/toolchains/: android.toolchain.cmake  armv7.cmake  ios.toolchain.cmake  riscv64-linux-gnu.cmake  riscv64.cmake  wasi.toolchain.cmake  wasm32-wasi.cmake
deploy/seccomp/: cosmoverse-seccomp.json
docker/: Dockerfile.distroless  apparmor-cosmoverse.profile  compose.yaml  seccomp-cosmoverse.json  seccomp-profile.json
docs/: ACCESSIBILITY.md  ANDROID.md  API_STABILITY.md  API_VERSIONING.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AUDIT.md  BACKPORTING.md  BACKPORT_POLICY.md  BENCHMARKING.md  BRANCHING_MODEL.md  BRANCH_PROTECTION.md  BRAND_GUIDE.md  CHECKS_ADVISORY.md  CII_BEST_PRACTICES.md  CODING_STANDARD.md  COMPATIBILITY_MATRIX.md  COMPLIANCE.md  CONTAINERS.md  CONTAINERS_SECURITY.md  CONTRIBUTOR_LADDER.md  CROSS_COMPILE.md  DATA_POLICY.md  DEPRECATION_POLICY.md  DISTRIBUTION.md  DIVERSITY_INCLUSION.md  EMERGENCY_RELEASE.md  EOL_POLICY.md  ERRORS.md  ETHICS.md  EXIT_CODES.md  EXPORT_CONTROL.md  INCLUSION.md  KEY_ROTATION.md  KUBERNETES.md  LOCALIZATION.md  LOGGING.md  LTS_POLICY.md  MACOS_NOTARIZATION.md  MAINTAINER_GUIDE.md  (+39 more)
docs/adr/: 0000-template.md  0001-use-cmake-as-primary-build.md  README.md
docs/adrs/: 0001-use-cpp20.md  ADR-0001-thread-pool.md
docs/man/: cosmoverse.1
etc/: cosmoverse.ini
examples/: c_api_example.c  hash_file.cpp  hello.cpp  threadpool_burst.cpp
examples/c-basic/: CMakeLists.txt  main.c
examples/cmake_consumer/: CMakeLists.txt  main.cpp
examples/consumer/: CMakeLists.txt  main.cpp
examples/cpp-basic/: CMakeLists.txt  main.cpp
fuzz/: README.md  fuzz_cosmo_api.cpp  hash_fuzz.cpp
i18n/: README.md  messages.pot
include/cosmoverse/: attributes.hpp  build_info.hpp.in  config.hpp  config_env.hpp  cosmoverse.hpp  cpu_dispatch.hpp  cpu_features.hpp  engine.hpp  export.hpp  hash.hpp  i18n.hpp  log.hpp  logging.hpp  metrics_prom.hpp  otel.hpp  pch.hpp  plugin.h  plugin_loader.hpp  runtime_init.hpp  telemetry.hpp  thread_pool.hpp  version.hpp.in
k8s/: deployment.yaml
man/: cosmoverse.1
packaging/aur/: PKGBUILD
packaging/choco/: cosmoverse.nuspec
packaging/chocolatey/: cosmoverse.nuspec
packaging/flatpak/: io.cosmoverse.Engine.yml
packaging/homebrew/: cosmoverse.rb
packaging/launchd/: com.cosmoverse.engine.plist
packaging/systemd/: cosmoverse.service
packaging/winget/: cosmoverse.yaml  manifest.yaml
plugins/rust_sample/: Cargo.toml
plugins/sample/: sample_plugin.cpp
po/: en.po  es.po
ports/cosmoverse/: portfile.cmake
schemas/: bench.schema.json  version.schema.json
scripts/: add_spdx.py  check_actions_pinning.py  check_dco.py  check_dco.sh  check_hardening.sh  check_large_files.py  checksums.sh  config_lint.py  coverage_gate.py  dco_check.sh  dev-setup.sh  doc_coverage.py  docs_language_check.py  doctor.sh  format_all.sh  generate_sbom.sh  generate_third_party_notice.py  hermetic_container_build.sh  install_check.sh  ld-version-script.map  license_allowlist.py  license_gate.py  lint_all.sh  perf_gate.py  pgo_bootstrap.sh  plugin_hash.sh  release_checksums.sh  repro_zip.py  sbom_diff.py  set_repro_epoch.sh  size_gate.py  third_party_from_scancode.py  validate_cli_json.py  validate_json.py  verify_container_signature.sh  verify_release_asset.sh
scripts/completions/: _cosmoverse  cosmoverse.bash  cosmoverse.fish  cosmoverse.zsh
security/: MAINTAINERS_PGP_KEYS.asc  VEX.example.cdx.json
snap/: snapcraft.yaml
src/: cosmoverse.cpp  cpu_dispatch.cpp  main.cpp
src/core/: config.cpp  config_env.cpp  crash_handler.cpp  hash.cpp  (+4 more)
tests/: compiles.cpp  headers_selfcheck.cpp  smoke.cpp  test_c_api.c  test_config.cpp  test_config_env.cpp  test_logger.cpp  test_main.cpp
toolchains/: mingw.cmake
web/: README.md
(+42 files in other folders)
